# boxoffice

./: README.md  boxoffice.cabal
src/: BoxOffice.hs  Lib.hs
test/: BoxOfficeTest.hs  LibTest.hs  Main.hs
