name:                boxoffice
version:             0.1.0.0
synopsis:            This provides an API to track hits of a website.
-- description:         TODO: Man it'd be great if I dubbed this in later once I wrote it.
homepage:            https://github.com/TheWizardTower/boxoffice#readme
license:             BSD3
license-file:        LICENSE
author:              Adam McCullough
maintainer:          merlinfmct87@gmail.com
copyright:           2017 Adam McCullough
category:            Library
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     BoxOffice
  build-depends:       base >= 4.7 && < 5,
                       stm,
                       transformers,
                       time
  default-language:    Haskell2010

test-suite boxoffice-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  other-modules: LibTest
  build-depends:       boxoffice
                     , async
                     , base
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , tasty-smallcheck
                     , QuickCheck
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/TheWizardTower/boxoffice
